# Learn-AI-Engineering

./: .env.default  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
assignment2/: app.py
assignments/: 01_text_classification.ipynb  01_text_classification_with_finetuning.ipynb  02_rag_assignment.ipynb
assignments/capstone_project/: api_schema.yml
data/QA/: test.csv
data/text-classification/: test.csv  train.csv
koans/: README.md  contemplate_koans_about_openai_api.py
learn_ai/assignments/: text_classification_assignment_1.ipynb
learn_ai/notebooks/: .env.sample  chapter-01-04-Who is this for.ipynb  chapter-01-Course-Introduction.ipynb  chapter-02-Prompts-101.ipynb  chapter-03-04-Tools.ipynb  chapter-03-Search-101.ipynb  chapter-05-Intro-to-Prompting.ipynb  chapter-06.ipynb  chapter-09-Chain of Thought.ipynb  chapter-1-2-Who is this for.ipynb  chapter-11-Malicious_Intent.ipynb  chapter-13-Building RAG from scratch.ipynb  chapter-14-Orchestration - LangChain or Llama Index.ipynb  chapter-15-RAG Evaluation - Retrieval Errors.ipynb  chapter-21-Modern Embeddings.ipynb  chapter-25-How to estimate costs.ipynb  chapter-3-Tools: LLMs, Embedding models, Function Calling.ipynb  chapter-7-Few Shot - In-context Learning.ipynb  entity.gv  (+3 more)
notebooks/: Week01-Introduction-to-NLP-Tasks.ipynb  Week1-Lecture0-Introduction-to-NLP-Tasks.ipynb  Week1-Lecture1-API-Params.ipynb  Week1-Lecture1-ChainofThought.ipynb  Week1-Lecture1-Course-Introduction.ipynb  Week1-Lecture1-Prompting-Tricks.ipynb  Week2-Lecture1-Langchain-Unstructured.ipynb  Week2-Lecture1-Prompting-Essentials.ipynb  Week3-Lecture1-Function-Calling.ipynb  Week3-Lecture2-RAG-Evaluation-with-Ragas.ipynb  Week4-Lecture0-PyTorch-Introduction.ipynb  chapter-01-Course-Introduction.ipynb  chapter-02-Prompts-101.ipynb  chapter-03-Search-101.ipynb  chapter-06-Chain-of-Thought.ipynb  chapter-06-Marvin-and-Moderation.ipynb  chapter-07-Function-Calling.ipynb  chapter-08-Function-Calling.ipynb  chapter-08-RAG-from-Scratch.ipynb  chapter-09-Langchain-LCEL.ipynb  chapter-10-DSPy-101.ipynb  chapter-10-DSPy-RAG-Challenge.ipynb  chapter-14-LlamaIndex-Retrievers.ipynb  chapter-15-RAG Evaluation - Retrieval Errors.ipynb  chapter-18-BERT-MLM-NWP.ipynb  chapter-19-Special Tokens.ipynb  chapter-20-Embeddings Basics.ipynb  chapter-20-Embeddings-1.ipynb  chapter-7-Few Shot - In-context Learning.ipynb  chapter-XX-Dspy.ipynb  lecture-10.ipynb  lecture-4.ipynb  lecture-8.ipynb  weekx-Lecturex-Finetuning.ipynb
quiz/: 01_consistency.ipynb  02_InContextLearning.ipynb
rag_eval/: app.py  augment.md  retrieve.md
scripts/: rag_langchain.py  rag_langchain_reorder.py  rag_llama_index.py  rag_llama_index_reorder.py  utils.py
(+37 files in other folders)
