[tool.poetry]
name = "learn_ai"
version = "0.0.1"
description = "FuturePath AI's training course on Generative AI"
authors = ["Maruti Agarwal <maruti@futurepath.ai>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
scikit-learn = "^1.2.2, <=1.3.2"
xgboost = "^1.7.5"
tabulate = "^0.9.0"
requests = "^2.28.2"
tqdm = "^4.66.1"
pandas = "2.2.1"
unstructured = {extras = ["pdf"], version = "^0.12.2"}
tiktoken = "^0.5.1"
sentence-transformers = "^2.2.2"
matplotlib = "^3.8.1"
llama-index = "^0.9.28.post1"
ragas = "^0.0.22"
langchain-openai = "^0.0.3"
outlines = "^0.0.24"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.1"
instructor = {version = "^0.6.1", python = ">=3.10,<=3.11"}
tenacity = "^8.2.3"
pydantic = "^2.6.4"
qdrant-client = "^1.8.2"
langchain = "^0.1.16"
langchain-community = "^0.0.34"
openai = "^1.23.3"
marvin = "^2.3.1"
langchainhub = "^0.1.15"
bs4 = "^0.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
termcolor = "^2.4.0"
jupyterlab = "^4.0.5"
ruff = "^0.4.1"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
